--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^3.5.24"
   },
   "dependencies": {
-    "mapjar": "^0.3.1"
+    "mapjar": "^0.3.3",
+    "vue-router": "^4.6.3"
   }
 }
